# finbot

./: .gitignore  Makefile  README.md  docker-compose.yaml  main.py  readmeai.md  requirements.txt  test.py  test2.py
.github/workflows/: build.yaml  ci.yaml
apps/: docker-compose.yaml
apps/agent/: .env.example  Dockerfile  Makefile  pyproject.toml  requirements.txt
apps/agent/src/: __main__.py  main.py
apps/agent/src/core/: agents.py
apps/agent/src/core/crawler/: base.py  html.py
apps/agent/src/core/embeddings/: __init__.py  base.py  openai.py
apps/agent/src/core/llms/: base.py  openai.py
apps/agent/src/core/prompts/: __init__.py  chat.py  generic.py  rag.py  summarize.py  task_check.py
apps/agent/src/core/shared/: const.py
apps/agent/src/core/tasks/: __init__.py  base.py  generic.py  rag.py
apps/agent/src/core/tools/: __init__.py  base.py  fetch_url.py  search.py  summarize.py  task_check.py
apps/agent/src/core/types/: __init__.py  enum_type.py
apps/agent/src/core/vectordb/: base.py  qdrant.py
apps/agent/src/crawler/: __init__.py  base.py  html.py
apps/agent/src/gui/: demo.py
apps/agent/src/gui/style/: style.css
apps/agent/tests/: test_agent.py  test_crawler.py
apps/crawler/: base.py  html.py  pyproject.toml
