[tool.poetry]
name = "finbot-agent"
version = "0.1.0"
description = ""
authors = ["Dat Vo <vodinhdat03@gmail.com>"]
readme = "README.md"
packages = [
  {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
