[tool.poetry]
name = "finbot-agent"
version = "0.1.0"
description = ""
authors = ["Dat Vo <vodinhdat03@gmail.com>"]
readme = "README.md"
packages = [
  {include = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.6"}
gradio = "^5.7.1"
pydantic = "^2.10.2"
uvicorn = "^0.32.1"
playwright = "^1.49.0"
httpx = "^0.28.0"
markdownify = "^0.14.1"
redis = "^5.2.0"
python-dotenv = "^1.0.1"
openai = "^1.58.1"
bs4 = "^0.0.2"
qdrant-client = "^1.12.1"
tiktoken = "^0.8.0"
google-api-python-client = "^2.156.0"

[tool.deptry.per_rule_ignores]
DEP002 = ["hiredis"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
deptry = "^0.21.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
